# soupbintcp

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  bc_soup_config.h.in  bc_soupbintcp_config.h.in  libsoup_config.h.in
cmake/: BcSoupConfig.cmake
example/: CMakeLists.txt  soup_client.cpp  soup_server.cpp
example/client/: CMakeLists.txt  main.cpp  soup_client.cpp
example/server/: CMakeLists.txt  main.cpp  soup_server.cpp
example/test/: CMakeLists.txt  option_convert_test.cpp  option_error_test.cpp
example/utility/: CMakeLists.txt  io_context_runner.cpp  io_context_runner.h  option_convert.cpp  option_convert.h  option_error.cpp  option_error.h
include/: CMakeLists.txt
include/bc/exp/: expected.h
include/bc/soup/: connection_state.h  constants.h  error.h  expected.h  file_store.h  heartbeat_timer.h  logical_packets.h  login_reject.h  login_timer.h  packing.h  reconnect_timer.h  rw_packets.h  socket.h  socket_acceptor.h  types.h  validate.h
include/bc/soup/client/: client.h  connection.h  handler.h  message.h  tcp_connection.h
include/bc/soup/server/: acceptor.h  handler.h  message.h  port.h  server.h  tcp_connection.h
include/exp/: expected.h
include/soup/: constants.h  file_store.h  logical_packets.h  packing.h  rw_packets.h  socket.h  socket_acceptor.h  types.h  validate.h
include/soup/client/: client.h
include/soup/server/: server.h
src/: CMakeLists.txt  connection_state.cpp  error.cpp  file_store.cpp  heartbeat_timer.cpp  logical_packets.cpp  login_timer.cpp  packing.cpp  reconnect_timer.cpp  rw_packets.cpp  socket.cpp  socket_acceptor.cpp  types.cpp  validate.cpp
src/client/: client.cpp  connection.cpp  tcp_connection.cpp
src/server/: acceptor.cpp  port.cpp  server.cpp  tcp_connection.cpp
test/: CMakeLists.txt  constants_test.cpp  error_test.cpp  expected_test.cpp  file_store_test.cpp  logical_packets_test.cpp  message_test.cpp  packing_test.cpp  rw_packets_test.cpp  validate_test.cpp
