add_library(bcsouptcp)
target_sources(bcsouptcp
  PRIVATE
    client/client.cpp
    client/connection.cpp
    client/tcp_connection.cpp
    error.cpp
    file_store.cpp
    heartbeat_timer.cpp
    logical_packets.cpp
    packing.cpp
    rw_packets.cpp
    server/acceptor.cpp
    server/port.cpp
    server/server.cpp
    server/tcp_connection.cpp
    socket.cpp
    socket_acceptor.cpp
    types.cpp
    validate.cpp
)
target_compile_features(bcsouptcp
  PUBLIC
    cxx_std_23
)
target_compile_options(bcsouptcp
  PUBLIC
    -Wall
    -Wextra
    -pedantic
    -Werror
)
