add_library(bcsoup)
target_sources(bcsoup
  PRIVATE
    client/client.cpp
    client/connection.cpp
    client/tcp_connection.cpp
    error.cpp
    file_store.cpp
    heartbeat_timer.cpp
    logical_packets.cpp
    packing.cpp
    rw_packets.cpp
    server/acceptor.cpp
    server/port.cpp
    server/server.cpp
    server/tcp_connection.cpp
    socket.cpp
    socket_acceptor.cpp
    types.cpp
    validate.cpp
)
target_compile_features(bcsoup
  PUBLIC
    cxx_std_23
)
target_compile_options(bcsoup
  PUBLIC
    -Wall
    -Wextra
    -pedantic
    -Werror
)
