add_executable(bc_soup_client)
target_sources(bc_soup_client
  PRIVATE
    soup_client.cpp
)
target_include_directories(bc_soup_client
  PRIVATE
    "${PROJECT_BINARY_DIR}"
)
target_link_libraries(bc_soup_client
  PRIVATE
    bcutility
    bcsouptcp
)
target_compile_features(bc_soup_client
  PRIVATE
    cxx_std_23
)
target_compile_options(bc_soup_client
  PRIVATE
    -Wall
    -Wextra
    -pedantic
    -Werror
)
