add_executable(bc_soup_server)
target_sources(bc_soup_server
  PRIVATE
    soup_server.cpp
)
target_include_directories(bc_soup_server
  PRIVATE
    "${PROJECT_BINARY_DIR}"
)
target_link_libraries(bc_soup_server
  PRIVATE
    bcutility
    bcsouptcp
)
target_compile_features(bc_soup_server
  PRIVATE
    cxx_std_23
)
